timeware/src/objects/Temporary_Badge__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temporary_Badge_Number__c</fullName>
        <label>Temporary Badge Number</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Temporary Badge</label>
    <nameField>
        <label>Temporary Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporary Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>